# crewAI-examples

stock_analysis/: .env.example  .example.env  .gitignore  pyproject.toml
stock_analysis/agent_pkgs/financial_agent/: pyproject.toml
stock_analysis/agent_pkgs/financial_agent/financial_agent/: component.yaml  run.py
stock_analysis/naptha_modules/financial_agent/: .env.example  pyproject.toml
stock_analysis/naptha_modules/financial_agent/financial_agent/: run.py  schemas.py
stock_analysis/naptha_modules/financial_agent/financial_agent/configs/: deployment.json
stock_analysis/src/stock_analysis/: crew.py
