[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "financial_agent"
version = "v0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = "^0.102.0"
pydantic = "*"
crewai_tools = "^0.36.0"
sec_api = "*"
embedchain = "^0.1.127"
requests = "*"
html2text = "*"
python-dotenv = "*"

[tool.poetry.dependencies.naptha-sdk]
git = "https://github.com/NapthaAI/naptha-sdk.git"
branch = "crewai"
